--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dbi-resources",
+  "name": "somerville-dbi-resources",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
